--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <div id="footer-wrapper" class="wrapper">
-  <div class="title">The Rest Of It</div>
+  <div class="title"><%= siteTitle %></div>
   <div id="footer" class="container">
     <header class="style1">
       <h2>Ipsum sapien elementum portitor?</h2>
