--- a/views/partials/top.ejs
+++ b/views/partials/top.ejs
@@ -2,6 +2,7 @@
   <div id="header">
 
     <!-- Logo -->
+    <!-- @TODO Fix header and main nav color and font so it can accomodate any image as background -->
     <div id="logo">
       <h1><a href="index.html"><%= siteTitle %></a></h1>
       <p>
